-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.2, 5.13.0 Beta3, 5.15.6
-
-
30276cec3d47f4f4fa847fea90214ec5c28d54ed (qt/qtbase/dev) 7fac45c313c9f7b649adcc5d853112adc2f85566 (qt/qtbase/dev), 3b14cb80e (tqtc/lts-5.15)
Selection of text from a read-only TextArea/ TextEdit is not smooth with iOS.
You can select the text with a double tap but there is no handle to change the selection.
TextArea{
text: "Sample Text"
readOnly: true
selectByMouse :true
selectByKeyboard: true
}
Selection works fine when read-only is set to false. But it should work with read-only text also.
- depends on
-
QTBUG-91417 Selection does not work in read-only text editing controls - QtWidgets
-
- Closed
-
- relates to
-
QTBUG-75556 Selection in TextEdit not working for Readonly text
-
- Closed
-
-
QTBUG-80315 MouseArea: Press and hold with stylus warn and doesn't call pressAndHold
-
- Closed
-
-
QTBUG-106358 QtPDF: hard to hide the keyboard on iOS
-
- Closed
-